--- a/01.Rmd
+++ b/01.Rmd
@@ -6,7 +6,7 @@ heath, meal planning, recipe, nutrition, organic, restaurant
 
 ## A beginning.
 
-Get step-by-step answer to the dreaded “what to eat tonight” question when you are trying to be healthier. What recipes will provide the nutritional content I need; are there organic and non-GMO ingredients available in stores; what is the recipe and can I just find it in a restaurant? Make easy decisions knowing that you are meeting your target diet, with foods that are in season and organic, and within time constraints. 
+Get step-by-step answer to the dreaded “what to eat tonight” question when you are trying to be healthier. What recipes will provide the nutritional content I need; are there organic and non-GMO ingredients available in stores; what is the recipe and can I just find it in a restaurant? Make easy decisions knowing that you are meeting your target diet, with foods that are in season and organic, and within time constraints. [@saxenian1994]
 
 ## A middle.
 
