--- a/02.Rmd
+++ b/02.Rmd
@@ -7,14 +7,23 @@ public housing, government planning, Singapore
 
 ## A beginning.
 
-The public housing system provides accommodation for 80% of Singapore’s population and is the cornerstone of the ruling party’s promise of prosperity to its population. As The Economist describes, the housing system is “a linchpin of economic and social policy and an anchor for the ruling People’s Action Party (PAP)”. However, the new generation of millenials faces skyrocketing prices, due to a rapidly growing population (40% increase since 2000) combined with speculative foreign investors, and has different demographics with their parents’ generation and demand different type of public housing. With a growing population driven mostly by immigrants, low marriage rates, declining and child-bearing rates and an aging population, the Singapore government faces challenges as it plans for the next wave of public housing.
+The public housing system provides accommodation for 80% of Singapore’s population and is the cornerstone of the ruling party’s promise of prosperity to its population. As The Economist describes, the housing system is “a linchpin of economic and social policy and an anchor for the ruling People’s Action Party (PAP)”. 
+
+However, the new generation of millenials faces skyrocketing prices, due to a rapidly growing population (40% increase since 2000) combined with speculative foreign investors, which has made home ownership more difficult. The new generation also have different desires than the previous owners of public apartments (called “flats”) and are not responsive to social influence policies of the government. Most notably, despite the rule that makes singles ineligible for public housing until 35 years of age, marriage rates are falling.
+
+This causes a potential gap between what the government is used to providing and the needs of the future population. By examining its current set of rules against the predicted future demand from the population, the Singapore government can assess what and where it needs to build for the future and the impact on property prices. As two important goals of the government include keeping property appreciation under control and the populace satisfied with home ownership attainment, this planning tool will help improve the government’s planning abilities and flag potential negative impact of current policies.
+
 
 ## A middle.
 
-Since the government has such immense control over supply of public housing, it needs to carefully control the balance of supply and demand to stabilize prices and increase flexibility to adapt to new public sentiment. From publicly available data sets provided by Singapore government (singstat.gov.sg) and a top property listing website (propertyguru.com.sg), this planning tool will find patterns affecting past housing build decisions and use input assummptions to predict future demand for public housing. Available datasets include household income, household expenses, life and mortality rates, marriage trends, education attainment, Singapore's economic growth, information related to housing supply and existing ownership profile.
+Since the government has such immense control over supply of public housing, it needs to carefully control the balance of supply and demand to stabilize prices and increase flexibility to adapt to new public sentiment. From publicly available data sets provided by Singapore government (singstat.gov.sg) and a top property listing website (propertyguru.com.sg), this planning tool will find patterns affecting past housing build decisions and use input assumptions to predict future demand for public housing. 
 
-The public housing planner will intake assumptions on population, economic growth and target levels of home ownership, home prices and regional mix. It will then suggest the most optimal build plan and location for housing. In addition to planning for supply of traditional public housing, the government can utilize this tool to predict impact of its decisions on private housing sector which has been very volatile in recent years. 
+Available datasets include household income, household expenses, life and mortality rates, marriage trends, education attainment, Singapore's economic growth, information related to housing supply and existing ownership profile.
+
+The public housing planner will intake assumptions on population, economic growth and target levels of home ownership, home prices and regional mix. It will then suggest the most optimal build plan and location for housing, as well as impact on property prices.
+
+In addition to planning for supply of traditional public housing, the government can utilize this tool to predict impact of its decisions on private housing sector which has been very volatile in recent years. The private housing market is necessary to monitor as a sizable portion of millennials may not qualify for public housing, so the government needs to understand the impact on quality of life for those affected.
 
 ## An end.
 
-The public housing planner will enable quick and easy scenario analysis based on actual data sets. Although it is impossible to quantify the improvements that this planning tool with bring to the Singapore government's ability to plan future supply, this planner will be of help to government planners. In addition to the government, the public will also get a simple understanding of what to expect from Singapore's public housing board.
+The public housing planner will enable quick and easy scenario analysis based on actual data sets especially in the short term. As government officials contemplate longer term plans, this planner will be able to generate long term scenarios which are difficult to project out without extensive analysis. Significantly, this tool will be able to highlight to government officials the potential negative outcomes of outdated policies that do not meet needs of new generation.
