expanded issues that can be solved

--- a/02.Rmd
+++ b/02.Rmd
@@ -7,14 +7,14 @@ public housing, government planning, Singapore
 
 ## A beginning.
 
-The public housing system provides accommodation for 80% of Singapore’s population and is the cornerstone of the ruling party’s promise of prosperity to its population. As The Economist describes, the housing system is “a linchpin of economic and social policy and an anchor for the ruling People’s Action Party (PAP)”. 
+The public housing system provides accommodation for 80% of Singapore’s population and is the cornerstone of the ruling party’s promise of prosperity to its population. As The Economist describes, the housing system is “a linchpin of economic and social policy and an anchor for the ruling People’s Action Party (PAP)”. The movements in public housing system also heavily influences the private property market as public housing is an alternative to private housing. As housing stability is one of the most important measures by which the Singapore government is judged, a tool that can predict the effect of policy proposals and build plans on housing prices (both public and private) will be useful to the government as it considers the future.
 
-However, the new generation of millenials faces skyrocketing prices, due to a rapidly growing population (40% increase since 2000) combined with speculative foreign investors, which has made home ownership more difficult. The new generation also have different desires than the previous owners of public apartments (called “flats”) and are not responsive to social influence policies of the government. Most notably, despite the rule that makes singles ineligible for public housing until 35 years of age, marriage rates are falling.
-
-This causes a potential gap between what the government is used to providing and the needs of the future population. By examining its current set of rules against the predicted future demand from the population, the Singapore government can assess what and where it needs to build for the future and the impact on property prices. As two important goals of the government include keeping property appreciation under control and the populace satisfied with home ownership attainment, this planning tool will help improve the government’s planning abilities and flag potential negative impact of current policies.
+The public housing system is straining as the new generation of millenials have different needs than what the current public housing system is providing. Compared to their parents, millennials faces skyrocketing prices due to a rapidly growing population (40% increase from 2000 to 2017) combined with speculative foreign investors which has made home ownership out of reach. Additionally, current policy requires that homebuyers get married before they can qualify for public housing. As many millennials delay or forego marriage, there is a large segment of the population who are served neither by the public housing market nor the exorbitantly-priced private market (where prices can be 2-3X that of similar public apartments). Finally, the new generation of aspiring homeowners also have different tastes than what the government is used to building.
 
 
 ## A middle.
+
+These issues cause a potential gap between what the government is used to providing and the needs of the future population. By examining its current set of rules against the predicted future demand from the population, the Singapore government can assess what and where it needs to build housing in the future and what policy changes are needed, both in public sector and private sector. As two important goals of the government include keeping property appreciation under control and the populace satisfied with home ownership, this planning tool will help improve the government’s planning abilities and flag potential negative impact of current policies.
 
 Since the government has such immense control over supply of public housing, it needs to carefully control the balance of supply and demand to stabilize prices and increase flexibility to adapt to new public sentiment. From publicly available data sets provided by Singapore government (singstat.gov.sg) and a top property listing website (propertyguru.com.sg), this planning tool will find patterns affecting past housing build decisions and use input assumptions to predict future demand for public housing. 
 
@@ -26,4 +26,4 @@ In addition to planning for supply of traditional public housing, the government
 
 ## An end.
 
-The public housing planner will enable quick and easy scenario analysis based on actual data sets especially in the short term. As government officials contemplate longer term plans, this planner will be able to generate long term scenarios which are difficult to project out without extensive analysis. Significantly, this tool will be able to highlight to government officials the potential negative outcomes of outdated policies that do not meet needs of new generation.
+The public housing planner will enable quick and easy scenario analysis based on actual data sets especially in the short term. As government officials contemplate longer term plans, this planner will be able to generate long term scenarios which are difficult to project out without extensive analysis. Significantly, this tool will be able to highlight to government officials the potential negative outcomes of outdated policies that do not meet needs of a new generation.
